--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T[itulo do site</title>
+    <title>Título do site</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>T[itulo do site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente expedita harum ut libero impedit odio ullam qui, sunt et debitis ipsum, rem accusantium pariatur! Ducimus aperiam doloribus sit necessitatibus! Corrupti.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor et magni dolorem voluptate inventore voluptatibus aspernatur labore debitis. Aliquid natus alias tenetur accusamus ab dolores laboriosam, explicabo animi totam dicta.</p>
         </article>
     </main>
 </body>
