--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do site</title>
+    <title>Site CursoemVídeo</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <header>
-            <h1>T[itulo do site</h1>
+            <h1>Título do site</h1>
         </header>
         <article>
             <h2>Artigo 001</h2>
