--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <header>
             <h1>Curso Grátis</h1>
+            <img src="Imagens/logo.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
