updates no site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site CursoemVídeo</title>
-    <link class="logo" rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
@@ -16,12 +16,14 @@
             <h2>Curso de HTML5 com CSS3</h2>
             <img class="lado" src="Imagens/html_css.png" alt="Curso de HTML5 e CSS3">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente expedita harum ut libero impedit odio ullam qui, sunt et debitis ipsum, rem accusantium pariatur! Ducimus aperiam doloribus sit necessitatibus! Corrupti.</p>
+            <p><a href="index_html5.html">Acesse nosso conteúdo de HTML</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
             <img class="lado" src="Imagens/símbolo_JavaScript.png" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor et magni dolorem voluptate inventore voluptatibus aspernatur labore debitis. Aliquid natus alias tenetur accusamus ab dolores laboriosam, explicabo animi totam dicta.</p>
-                              </article>
+            <p><a href="index_JavaScript.html">Acesse nosso conteúdo de JavaScript</a></p>
+        </article>
     </main>
 </body>
 </html>
